--- a/index.html
+++ b/index.html
@@ -5,188 +5,29 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Biblioteka Online</title>
 <style>
-body {
-  font-family: Arial;
-  margin:0;
-  padding:0;
-  background:#f5f5f5;
-}
-
-header {
-  background:#2b3a67;
-  color:white;
-  padding:20px 10px;
-  text-align:center;
-  position:relative;
-}
-
-header h1 {
-  margin:0;
-  font-size:28px;
-}
-
-#burger {
-  position:absolute;
-  left:15px;
-  top:22px;
-  font-size:26px;
-  cursor:pointer;
-}
-
-#searchBox {
-  margin-top:10px;
-  padding:8px 10px;
-  border-radius:5px;
-  border:none;
-  width:80%;
-  max-width:400px;
-}
-
-nav {
-  display:none;
-  background:white;
-  padding:10px;
-  position:absolute;
-  top:70px;
-  left:10px;
-  width:220px;
-  box-shadow:0 2px 6px rgba(0,0,0,0.2);
-  z-index:10;
-  border-radius:10px;
-}
-
-nav ul {
-  list-style:none;
-  padding:0;
-  margin:0;
-}
-
-nav ul li {
-  padding:12px 10px;
-  border-bottom:1px solid #ccc;
-  cursor:pointer;
-  font-weight:500;
-}
-
-nav ul li:hover {
-  background:#f0f0f0;
-}
-
-#booksContainer {
-  max-width:1000px;
-  margin:25px auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap:20px;
-  padding:0 10px;
-}
-
-.bookCard {
-  background:white;
-  padding:15px;
-  border-radius:10px;
-  box-shadow:0 2px 6px rgba(0,0,0,0.2);
-  text-align:center;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  cursor:pointer;
-  border:2px solid #2b3a67;
-}
-
-.bookCard img {
-  width:150px;
-  height:200px;
-  object-fit:cover;
-  border-radius:5px;
-}
-
-.bookCard h3 {
-  margin:10px 0 5px;
-}
-
-.bookCard p {
-  font-size:14px;
-  margin:5px 0;
-}
-
-.bookCard a {
-  display:inline-block;
-  margin-top:5px;
-  padding:5px 10px;
-  background:#2b3a67;
-  color:white;
-  border-radius:5px;
-  text-decoration:none;
-}
-
-/* Modal */
-#bookModal, #cPanelModal {
-  display:none;
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  background: rgba(0,0,0,0.7);
-  justify-content:center;
-  align-items:center;
-  z-index:100;
-}
-
-#bookModalContent, #cPanelContent {
-  background:white;
-  padding:20px;
-  border-radius:10px;
-  max-width:450px;
-  width:90%;
-  max-height:90%;
-  overflow-y:auto;
-  border:2px solid #2b3a67;
-}
-
-#bookModalContent img {
-  width:100%;
-  height:auto;
-  border-radius:5px;
-}
-
-#closeModal, #closeCPanel {
-  cursor:pointer;
-  float:right;
-  font-size:20px;
-  font-weight:bold;
-  color:#2b3a67;
-}
-
-input, textarea, select, button {
-  display:block;
-  width:100%;
-  margin:10px 0;
-  padding:10px;
-  border-radius:5px;
-  border:1px solid #ccc;
-}
-
-button {
-  background:#2b3a67;
-  color:white;
-  border:none;
-  cursor:pointer;
-  font-weight:bold;
-}
-
-.message {
-  text-align:center;
-  color:red;
-  font-weight:bold;
-}
-
-@media (max-width:600px) {
-  #booksContainer {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
+body { font-family: Arial; margin:0; padding:0; background:#f5f5f5; }
+header { background:#2b3a67; color:white; padding:20px 10px; text-align:center; position:relative; }
+header h1 { margin:0; font-size:28px; }
+#burger { position:absolute; left:15px; top:22px; font-size:26px; cursor:pointer; }
+#searchBox { margin-top:10px; padding:8px 10px; border-radius:5px; border:none; width:80%; max-width:400px; }
+nav { display:none; background:white; padding:10px; position:absolute; top:70px; left:10px; width:220px; box-shadow:0 2px 6px rgba(0,0,0,0.2); z-index:10; border-radius:10px; }
+nav ul { list-style:none; padding:0; margin:0; }
+nav ul li { padding:12px 10px; border-bottom:1px solid #ccc; cursor:pointer; font-weight:500; }
+nav ul li:hover { background:#f0f0f0; }
+#booksContainer { max-width:1000px; margin:25px auto; display:grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap:20px; padding:0 10px; }
+.bookCard { background:white; padding:15px; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.2); text-align:center; display:flex; flex-direction:column; align-items:center; cursor:pointer; border:2px solid #2b3a67; }
+.bookCard img { width:150px; height:200px; object-fit:cover; border-radius:5px; }
+.bookCard h3 { margin:10px 0 5px; }
+.bookCard p { font-size:14px; margin:5px 0; }
+.bookCard a { display:inline-block; margin-top:5px; padding:5px 10px; background:#2b3a67; color:white; border-radius:5px; text-decoration:none; }
+#bookModal, #cPanelModal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.7); justify-content:center; align-items:center; z-index:100; }
+#bookModalContent, #cPanelContent { background:white; padding:20px; border-radius:10px; max-width:450px; width:90%; max-height:90%; overflow-y:auto; border:2px solid #2b3a67; }
+#bookModalContent img { width:100%; height:auto; border-radius:5px; }
+#closeModal, #closeCPanel { cursor:pointer; float:right; font-size:20px; font-weight:bold; color:#2b3a67; }
+input, textarea, select, button { display:block; width:100%; margin:10px 0; padding:10px; border-radius:5px; border:1px solid #ccc; }
+button { background:#2b3a67; color:white; border:none; cursor:pointer; font-weight:bold; }
+.message { text-align:center; color:red; font-weight:bold; }
+@media (max-width:600px) { #booksContainer { grid-template-columns: repeat(2, 1fr); } }
 </style>
 </head>
 <body>
@@ -221,7 +62,6 @@ button {
 <div id="cPanelModal">
   <div id="cPanelContent">
     <span id="closeCPanel">✖</span>
-
     <div id="loginContainer">
       <h2>Login Admin</h2>
       <input type="email" id="email" placeholder="Email">
@@ -229,7 +69,6 @@ button {
       <button id="loginBtn">Kyçu</button>
       <p class="message" id="loginMessage"></p>
     </div>
-
     <div id="panelContainer" style="display:none;">
       <h2>Shto kategori të re</h2>
       <input type="text" id="categoryName" placeholder="Emri i kategorisë">
@@ -256,15 +95,13 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/fireba
 import { getFirestore, collection, addDoc, getDocs, query, where } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
-// Firebase Config
 const firebaseConfig = {
   apiKey: "AIzaSyBrH_LPGz-66c9s9LYqmnyjCEX1yUGt3BA",
   authDomain: "bibliotekaapp-2f2b5.firebaseapp.com",
   projectId: "bibliotekaapp-2f2b5",
   storageBucket: "bibliotekaapp-2f2b5.appspot.com",
   messagingSenderId: "1056004303783",
-  appId: "1:1056004303783:web:335725cdfeefc690702482",
-  measurementId: "G-QHEGWD5J2B"
+  appId: "1:1056004303783:web:335725cdfeefc690702482"
 };
 
 const app = initializeApp(firebaseConfig);
@@ -289,147 +126,104 @@ const loginContainer = document.getElementById("loginContainer");
 const panelContainer = document.getElementById("panelContainer");
 const bookCategory = document.getElementById("bookCategory");
 
-// --- BURGER MENU ---
+// Burger menu
 burger.addEventListener("click", () => {
   const open = navMenu.style.display === "block";
   navMenu.style.display = open ? "none" : "block";
   burger.innerHTML = open ? "&#9776;" : "✖";
 });
 
-// --- C PANEL MODAL ---
+// C Panel Modal
 cPanelLink.addEventListener("click", () => {
   cPanelModal.style.display = "flex";
   navMenu.style.display = "none";
   burger.innerHTML = "&#9776;";
 });
 
-// --- CLOSE MODALS ---
-closeBookModal.addEventListener("click", () => bookModal.style.display = "none");
-closeCPanel.addEventListener("click", () => cPanelModal.style.display = "none");
+// Close modals
+closeModal.addEventListener("click", () => bookModal.style.display="none");
+closeCPanel.addEventListener("click", () => cPanelModal.style.display="none");
 
-// --- LOGIN ADMIN ---
+// Admin login
 document.getElementById("loginBtn").addEventListener("click", async () => {
-  const email = document.getElementById("email").value;
-  const password = document.getElementById("password").value;
-  const msg = document.getElementById("loginMessage");
-  msg.textContent = "Po kyç...";
-  try {
-    await signInWithEmailAndPassword(auth, email, password);
-    msg.textContent = "";
-  } catch {
-    msg.textContent = "Email ose fjalëkalim gabim!";
-  }
+  const email=document.getElementById("email").value;
+  const password=document.getElementById("password").value;
+  const msg=document.getElementById("loginMessage");
+  msg.textContent="Po kyç...";
+  try{ await signInWithEmailAndPassword(auth,email,password); msg.textContent=""; } 
+  catch{ msg.textContent="Email ose fjalëkalim gabim!"; }
 });
 
-document.getElementById("logoutBtn").addEventListener("click", async () => {
-  await signOut(auth);
+document.getElementById("logoutBtn").addEventListener("click", async()=>{await signOut(auth);});
+
+onAuthStateChanged(auth,(user)=>{
+  if(user){ loginContainer.style.display="none"; panelContainer.style.display="block"; loadCategories(); }
+  else{ loginContainer.style.display="block"; panelContainer.style.display="none"; }
 });
 
-onAuthStateChanged(auth, (user) => {
-  if (user) {
-    loginContainer.style.display = "none";
-    panelContainer.style.display = "block";
-    loadCategories();
-  } else {
-    loginContainer.style.display = "block";
-    panelContainer.style.display = "none";
-  }
-});
-
-// --- KATEGORITË ---
-document.getElementById("addCategoryBtn").addEventListener("click", async () => {
-  const name = document.getElementById("categoryName").value;
-  const msg = document.getElementById("categoryMsg");
-  if (!name) return;
-  try {
-    await addDoc(collection(db, "categories"), { name });
-    msg.textContent = "✅ Kategoria u shtua!";
-    document.getElementById("categoryName").value = "";
-    loadCategories();
-  } catch (err) { msg.textContent = err.message; }
-});
-
-async function loadCategories() {
-  bookCategory.innerHTML = "";
-  const snapshot = await getDocs(collection(db, "categories"));
-  snapshot.forEach(doc => {
-    const opt = document.createElement("option");
-    opt.value = doc.data().name;
-    opt.textContent = doc.data().name;
+// Load categories
+async function loadCategories(){
+  bookCategory.innerHTML="";
+  const snapshot = await getDocs(collection(db,"categories"));
+  snapshot.forEach(doc=>{
+    const opt=document.createElement("option");
+    opt.value=doc.data().name;
+    opt.textContent=doc.data().name;
     bookCategory.appendChild(opt);
   });
 }
 
-// --- SHTO LIBËR ---
-document.getElementById("uploadBookBtn").addEventListener("click", async () => {
-  const title = document.getElementById("bookTitle").value;
-  const author = document.getElementById("bookAuthor").value;
-  const year = document.getElementById("bookYear").value;
-  const description = document.getElementById("bookDescription").value;
-  const category = bookCategory.value;
-  const imageUrl = document.getElementById("bookImageUrl").value;
-  const pdfUrl = document.getElementById("bookPdfUrl").value;
-  const msg = document.getElementById("uploadMessage");
-
-  if (!pdfUrl || !imageUrl) { msg.textContent = "Vendos link PDF dhe Foto!"; return; }
-
-  try {
-    await addDoc(collection(db, "books"), {
-      title, author, year, description, category, pdfUrl, imageUrl, createdAt: new Date()
-    });
-    msg.textContent = "✅ Libri u shtua!";
-  } catch (err) { msg.textContent = err.message; }
+document.getElementById("addCategoryBtn").addEventListener("click", async()=>{
+  const name=document.getElementById("categoryName").value;
+  const msg=document.getElementById("categoryMsg");
+  if(!name)return;
+  try{ await addDoc(collection(db,"categories"),{name}); msg.textContent="✅ Kategoria u shtua!"; document.getElementById("categoryName").value=""; loadCategories(); }
+  catch(err){ msg.textContent=err.message; }
 });
 
-// --- NGARKO LIBRAT ---
-async function loadBooks(category = null, searchText = "") {
-  booksContainer.innerHTML = "";
-  let q = collection(db, "books");
-  if(category && category !== "Të gjitha") {
-    q = query(q, where("category","==",category));
-  }
-  const snapshot = await getDocs(q);
-  snapshot.forEach(doc => {
-    const d = doc.data();
-    if(searchText && !(d.title.toLowerCase().includes(searchText.toLowerCase()) || d.author.toLowerCase().includes(searchText.toLowerCase()))) return;
-    const div = document.createElement("div");
-    div.className = "bookCard";
-    div.innerHTML = `
-      <img src="${d.imageUrl}" alt="${d.title}">
-      <h3>${d.title}</h3>
-      <p><strong>Autor:</strong> ${d.author}</p>
-      <p><strong>Viti:</strong> ${d.year}</p>
-    `;
-    div.addEventListener("click", () => showBookModal(d));
+// Upload book
+document.getElementById("uploadBookBtn").addEventListener("click", async()=>{
+  const title=document.getElementById("bookTitle").value;
+  const author=document.getElementById("bookAuthor").value;
+  const year=document.getElementById("bookYear").value;
+  const description=document.getElementById("bookDescription").value;
+  const category=bookCategory.value;
+  const imageUrl=document.getElementById("bookImageUrl").value;
+  const pdfUrl=document.getElementById("bookPdfUrl").value;
+  const msg=document.getElementById("uploadMessage");
+  if(!pdfUrl||!imageUrl){ msg.textContent="Vendos link PDF dhe Foto!"; return; }
+  try{ await addDoc(collection(db,"books"),{title,author,year,description,category,imageUrl,pdfUrl,createdAt:new Date()}); msg.textContent="✅ Libri u shtua!"; }
+  catch(err){ msg.textContent=err.message; }
+});
+
+// Load books
+async function loadBooks(category=null,searchText=""){
+  booksContainer.innerHTML="";
+  let q=collection(db,"books");
+  if(category && category!=="Të gjitha") q=query(q,where("category","==",category));
+  const snapshot=await getDocs(q);
+  snapshot.forEach(doc=>{
+    const d=doc.data();
+    if(searchText && !(d.title.toLowerCase().includes(searchText.toLowerCase())||d.author.toLowerCase().includes(searchText.toLowerCase()))) return;
+    const div=document.createElement("div");
+    div.className="bookCard";
+    div.innerHTML=`<img src="${d.imageUrl}" alt="${d.title}"><h3>${d.title}</h3><p><strong>Autor:</strong> ${d.author}</p><p><strong>Viti:</strong> ${d.year}</p>`;
+    div.addEventListener("click",()=>showBookModal(d));
     booksContainer.appendChild(div);
   });
 }
 
-// --- MODAL LIBRI ---
-function showBookModal(b) {
-  modalContent.innerHTML = `
-    <h2>${b.title}</h2>
-    <p><strong>Autor:</strong> ${b.author}</p>
-    <p><strong>Viti:</strong> ${b.year}</p>
-    <img src="${b.imageUrl}" alt="${b.title}">
-    <p>${b.description}</p>
-    <a href="${b.pdfUrl}" target="_blank">📖 Shkarko PDF</a>
-  `;
-  bookModal.style.display = "flex";
+// Show modal
+function showBookModal(b){
+  modalContent.innerHTML=`<h2>${b.title}</h2><p><strong>Autor:</strong> ${b.author}</p><p><strong>Viti:</strong> ${b.year}</p><img src="${b.imageUrl}" alt="${b.title}"><p>${b.description}</p><a href="${b.pdfUrl}" target="_blank">📖 Shkarko PDF</a>`;
+  bookModal.style.display="flex";
 }
 
-// --- FILTRAT ---
-categoryItems.forEach(item => {
-  item.addEventListener("click", () => {
-    const cat = item.dataset.category;
-    loadBooks(cat, searchBox.value);
-    navMenu.style.display = "none";
-    burger.innerHTML = "&#9776;";
-  });
-});
-searchBox.addEventListener("input", () => loadBooks(null, searchBox.value));
+// Filters
+categoryItems.forEach(item=>item.addEventListener("click",()=>{ const cat=item.dataset.category; loadBooks(cat,searchBox.value); navMenu.style.display="none"; burger.innerHTML="&#9776;"; }));
+searchBox.addEventListener("input",()=>loadBooks(null,searchBox.value));
 
-// --- START ---
+// Init
 loadBooks();
 </script>
 
